After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774240 - Details > Overview displays dual graphics on one line
Details > Overview displays dual graphics on one line
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Other Preferences
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-11 02:07 UTC by Luya Tshimbalanga
Modified: 2016-12-05 14:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Actual display of Details on Fedora 25 running on Gnome 3.22.x (48.01 KB, image/png)
2016-11-11 02:07 UTC, Luya Tshimbalanga
  Details
Correct display of details > overview for hybrid graphics card powered device (56.77 KB, image/png)
2016-11-11 02:08 UTC, Luya Tshimbalanga
  Details
before patches (44.95 KB, image/png)
2016-11-16 16:02 UTC, Bastien Nocera
  Details
after patches (38.12 KB, image/png)
2016-11-16 16:02 UTC, Bastien Nocera
  Details
info: Do not crash if Renderer is not set by SessionManager (1.10 KB, patch)
2016-12-05 09:32 UTC, Ondrej Holy
none Details | Review
info: Do not crash if Renderer is not set by SessionManager (947 bytes, patch)
2016-12-05 13:21 UTC, Ondrej Holy
committed Details | Review

Description Luya Tshimbalanga 2016-11-11 02:07:12 UTC
Created attachment 339587 [details]
Actual display of Details on Fedora 25 running on Gnome 3.22.x

Details > Overview on Control Panel version 3.22.x display dual video-cards information on a single instead of list. The issue mostly affects hardware with multiple graphics adapters notably hybrid graphics powered laptops. The correct renders will be displayed on other comment.
Comment 1 Luya Tshimbalanga 2016-11-11 02:08:13 UTC
Created attachment 339588 [details]
Correct display of details > overview for hybrid graphics card powered device
Comment 2 Bastien Nocera 2016-11-16 16:02:37 UTC
Created attachment 340022 [details]
before patches
Comment 3 Bastien Nocera 2016-11-16 16:02:57 UTC
Created attachment 340023 [details]
after patches
Comment 4 Bastien Nocera 2016-11-16 16:05:21 UTC
Rather than having multi-lines, I trimmed the description strings which contain too much garbage.

commit 69c17d865273d632ba7b47d6e5d348758c31d870
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 17:00:58 2016 +0100

    info: Also trim useless info when trailing ")" is missing
    
    As seen in attachment 339587 [details]
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit 1549857fc98626cd0728d74b7adbf97367a02af2
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 16:52:56 2016 +0100

    info: Lowercase APU/GPU names for AMD
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit 4d39db6b20587d7afc060e4b67c89886cca8310c
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 16:44:43 2016 +0100

    info: Add registered trademark symbol for AMD GPUs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit 91e920b4961dde937180c5e4467c8e80d499035f
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 16:40:08 2016 +0100

    info: Trim AMD renderer strings
    
    Remove the references to Gallium, and the exact versions of the DRM
    backend, the kernel and LLVM. Debug information can still be gathered in
    plenty of other ways.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit 52da4dafeb87af85d7bea00449d73aac1d97be72
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 16:10:52 2016 +0100

    info: Move duplicate space removal to info-cleanup.c
    
    So that we don't have to do that separately for CPUs.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit 34b1d0d083161b8b5b817efd92823fc91e927e07
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 16:03:03 2016 +0100

    info: Add test case for trailing spaces
    
    As seen in:
    https://bugzilla.gnome.org/show_bug.cgi?id=773213#c4

commit 4eacd5608167f7500145cbbce84c0c1bf0420a40
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 15:20:39 2016 +0100

    info: Add test suite for info cleanup
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240

commit cf6b2138b9299b5c94d849ad5475f1c4dde8a75e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 16 15:07:10 2016 +0100

    info: Split off CPU and graphics strings cleanup
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774240
Comment 5 Luya Tshimbalanga 2016-12-04 04:44:47 UTC
Thank you Bastien for the quick response.
Comment 6 Ondrej Holy 2016-12-05 09:32:41 UTC
Created attachment 341387 [details] [review]
info: Do not crash if Renderer is not set by SessionManager

This regression has been introduced by commit 52da4da probably. The
info panel crashes if prettify_info() returns NULL. This happens
if Renderer property from SessionManager is empty.
Comment 7 Bastien Nocera 2016-12-05 11:05:45 UTC
Review of attachment 341387 [details] [review]:

::: panels/info/info-cleanup.c
@@ +134,3 @@
+  if (pretty != NULL)
+    {
+      ret = remove_duplicate_whitespace (pretty);

I'd rather make remove_duplicate_whitespace() accept NULL.
Comment 8 Ondrej Holy 2016-12-05 13:21:54 UTC
Created attachment 341396 [details] [review]
info: Do not crash if Renderer is not set by SessionManager

Updated per review...
Comment 9 Bastien Nocera 2016-12-05 13:29:44 UTC
Review of attachment 341396 [details] [review]:

> This regression has been introduced by commit 52da4da probably. The

Would be great if you could check so that the "probably" is removed.

Looks good otherwise.
Comment 10 Ondrej Holy 2016-12-05 14:51:53 UTC
Attachment 341396 [details] pushed as e8aa9fc - info: Do not crash if Renderer is not set by SessionManager

It was really caused by that patch, so I modified the commit message before pushing...