info: Split off CPU and graphics strings cleanup

https://bugzilla.gnome.org/show_bug.cgi?id=774240